[workspace.package]
version = "0.0.2"
authors = ["Fastnear Inc <hello@fastnear.com>"]
edition = "2021"
repository = "https://github.com/fastnear/helpers"
rust-version = "1.86.0"
license = "MIT OR Apache-2.0"

[workspace]
resolver = "2"
members = [
    "verify-neardata",
    "tx-extractor-neardata",
    "extract-validators",
]

[workspace.dependencies]
dotenv = "0.15.0"
openssl-probe = { version = "0.1.5" }
fastnear-primitives = "0.30.1"
fastnear-neardata-fetcher = "0.30.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
serde_with = { version = "3.0", features = ["base64"] }
reqwest = { version = "0.12.2", features = ["json"] }
tokio = { version = "1.38", features = ["time", "sync", "rt-multi-thread", "macros"] }
tracing = { version = "0.1.13", features = ["log"] }
borsh = { version = "1.5.0", features = ["derive"] }
ctrlc = "3"
